# study_opengl

./: .gitignore  CMakeLists.txt  README.md
include/gles/: gles.h  gles_android.h  gles_linux.h  gles_windows.h
src/hello_triangle/: hello_triangle.cpp  hello_triangle.h
src/main/: main.cpp
